objects/Case_LastViewed__c.object
<CustomObject>
    <description>Holds a single record per case of when the last time the corresponding community user, if any, last viewed the record.  Used on the community pages to highlight support requests with new updates.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case LastViews</relationshipLabel>
        <relationshipName>Case_LastViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Viewed__c</fullName>
        <description>True if the user has viewed the related Case since its last update.</description>
        <formula>Last_Viewed_Date__c &gt;= Case__r.LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Viewed Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Viewed_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Case_LastViews</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case LastView</label>
    <nameField>
        <displayFormat>CLV{000000000}</displayFormat>
        <label>Case LastViewed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case LastViews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>